final upgrade